[gd_scene load_steps=7 format=2]

[ext_resource path="res://art/bill.png" type="Texture" id=1]
[ext_resource path="res://src/SketchFont.tres" type="Theme" id=2]
[ext_resource path="res://src/GameInfo.gd" type="Script" id=3]
[ext_resource path="res://art/wiz_base.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "BillFlashRed"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "WizFlashRed"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("../../WizNode:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="GameInfo" type="Node2D"]
script = ExtResource( 3 )

[node name="BillNode" type="Node2D" parent="."]

[node name="Bill" type="Sprite" parent="BillNode"]
position = Vector2( 31.75, 17.75 )
scale = Vector2( 0.155833, 0.1425 )
texture = ExtResource( 1 )

[node name="MoneyLbl" type="Label" parent="BillNode"]
modulate = Color( 0.352941, 0.352941, 0.352941, 1 )
margin_left = 67.0
margin_right = 435.0
margin_bottom = 209.0
rect_scale = Vector2( 0.298558, 0.219048 )
theme = ExtResource( 2 )
text = "4"
align = 1
clip_text = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="BillNode"]
root_node = NodePath("../MoneyLbl")
anims/BillFlashRed = SubResource( 1 )

[node name="WizNode" type="Node2D" parent="."]

[node name="WizBase" type="Sprite" parent="WizNode"]
modulate = Color( 0.580392, 0.647059, 0.67451, 1 )
position = Vector2( 30.75, 77.75 )
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 4 )

[node name="Slash" type="Label" parent="WizNode"]
modulate = Color( 0.0745098, 0.0745098, 0.0745098, 1 )
margin_left = 136.928
margin_top = 44.0
margin_right = 230.928
margin_bottom = 253.0
rect_rotation = 23.7786
rect_scale = Vector2( 0.316937, 0.35514 )
theme = ExtResource( 2 )
text = "I"
clip_text = true

[node name="CurWizLbl" type="Label" parent="WizNode"]
modulate = Color( 0.352941, 0.352941, 0.352941, 1 )
margin_left = 67.0
margin_top = 55.0
margin_right = 231.0
margin_bottom = 264.0
rect_scale = Vector2( 0.298558, 0.219048 )
theme = ExtResource( 2 )
text = "2"
align = 1
clip_text = true

[node name="MaxWizLbl" type="Label" parent="WizNode"]
modulate = Color( 0.0745098, 0.0745098, 0.0745098, 1 )
margin_left = 138.928
margin_top = 55.0
margin_right = 309.928
margin_bottom = 264.0
rect_scale = Vector2( 0.298558, 0.219048 )
theme = ExtResource( 2 )
text = "3"
align = 1
clip_text = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="WizNode"]
root_node = NodePath("../../BillNode/MoneyLbl")
anims/WizFlashRed = SubResource( 2 )
